--- a/css/form.css
+++ b/css/form.css
@@ -194,3 +194,571 @@ body{
     top: 20%;
     left: 25%;
 }
+
+@media screen and (max-width:1024px){
+    /* Parte da logo */
+    .logo{
+        position: absolute;
+        display: flex;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 150%;
+        text-align: center;
+        background-image: url('../imagens_fundo/img1.png');
+        background-size: 1300px 1024px;
+        
+    }
+    .otherPg{
+        border-radius: 5%;
+        height: 5%;
+        width: 70%;
+        color:white;
+        list-style: none;
+        font-weight: bold;
+        text-align: center;
+        position: fixed;
+        display: flex;
+        top: 2%;
+        left: 13%;
+    }
+    
+    .links{
+        position: absolute;
+        top: 30%;
+        color: white;
+        font-family: 'Gotu';
+        font-size: 0.8em;
+    }
+    
+    .a1{
+        color: white;
+        text-decoration-line: none;
+        padding: 20px;
+    }
+    .a1:hover{
+        color: #00BCCD;
+    }
+    .a2{
+        background-color: transparent;
+        color: white;
+        text-decoration-line: none;
+        padding: 10px;
+        border-style: none;
+    }
+    
+    .a2:hover{
+        color: #00BCCD;
+    }
+    .a3{
+        color: white;
+        text-decoration-line: none;
+        padding: 10px;
+    }
+    .a3:hover{
+        color: #00BCCD;
+    }
+    .a4{
+        color: white;
+        text-decoration-line: none;
+        padding: 10px;
+    }
+    .a4:hover{
+        color: #00BCCD;
+    }
+    .a5{
+        color: white;
+        text-decoration-line: none;
+        padding: 10px;
+    }
+    .a5:hover{
+        color: #00BCCD;
+    }
+    
+    .menu{
+        position: absolute;
+        left: 90%;
+        border-style: none;
+        
+    }
+    .n{
+        position:absolute;
+        left: 18%;
+        top: 20%;
+        font-size: 3.5em;
+        color: white;
+        font-family: 'Gotu';
+    }
+    .m{
+        position: absolute;
+        left: 57%;
+        top: 20%;
+        font-size: 3.5em;
+        color: #00BCCD;
+        font-family: 'Gotu';
+    }
+    .txt1{
+        position: absolute;
+        width: 50%;
+        left: 25%;
+        top: 35%;
+        font-size: 1.5em;
+        color: white;
+        font-family: 'Gotu';
+    }
+    .box1{
+        display: flex;
+        position: absolute;
+        border: 1px solid black;
+        background-color: white;
+        border-radius: 10%;
+        background-color: #005E93;
+        width: 50%;
+        height: 60%;
+        left: 22%;
+        top: 40%;
+    }
+    
+    .titulo1{
+        display: flex;
+        position: absolute;
+        top: 5%;
+        left: 6%;
+        width: 80%;
+        font-family: 'Gotu';
+        font-size: 1.7em;
+    }
+    
+    #idNome{
+        position: absolute;
+        top: 25%;
+        left: 10%;
+        border-radius: 10px;
+        height: 7%;
+        width: 75%;
+        border-style: none;
+    }
+    
+    #idEmail{
+        position: absolute;
+        top: 35%;
+        left: 10%;
+        border-radius: 10px;
+        height: 7%;
+        width: 75%;
+        border-style: none;
+    }
+    #idMensagem{
+        position: absolute;
+        top: 45%;
+        left: 10%;
+        border-radius: 10px;
+        height: 45%;
+        width: 75%;
+        text-align: start;
+    }
+    #idMensagem::placeholder{
+        position: absolute;
+        top: 4%;
+        left: 2%;
+    }
+    .mandar{
+        position: absolute;
+        background-color:#00BCCD;
+        border: 1.2px solid #00BCCD;
+        border-radius: 10px;
+        height: 5%;
+        width: 15%;
+        color:black;
+        list-style: none;
+        font-weight: bold;
+        position: absolute;
+        display: flex;
+        top: 93%;
+        left: 40%;
+         
+    }
+    .env{
+        position: absolute;
+        top: 20%;
+        left: 25%;
+    } 
+}
+@media screen and (max-width:768px){
+    /* Parte da logo */
+    .logo{
+        position: absolute;
+        display: flex;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 150%;
+        text-align: center;
+        background-image: url('../imagens_fundo/img1.png');
+        background-size: 1300px 1024px;
+        
+    }
+    .otherPg{
+        border-radius: 5%;
+        height: 5%;
+        width: 70%;
+        color:white;
+        list-style: none;
+        font-weight: bold;
+        text-align: center;
+        position: fixed;
+        display: flex;
+        top: 2%;
+        left: 13%;
+    }
+    
+    .links{
+        position: absolute;
+        top: 30%;
+        color: white;
+        font-family: 'Gotu';
+        font-size: 0.8em;
+    }
+    
+    .a1{
+        color: white;
+        text-decoration-line: none;
+        padding: 20px;
+    }
+    .a1:hover{
+        color: #00BCCD;
+    }
+    .a2{
+        background-color: transparent;
+        color: white;
+        text-decoration-line: none;
+        padding: 10px;
+        border-style: none;
+    }
+    
+    .a2:hover{
+        color: #00BCCD;
+    }
+    .a3{
+        color: white;
+        text-decoration-line: none;
+        padding: 10px;
+    }
+    .a3:hover{
+        color: #00BCCD;
+    }
+    .a4{
+        color: white;
+        text-decoration-line: none;
+        padding: 10px;
+    }
+    .a4:hover{
+        color: #00BCCD;
+    }
+    .a5{
+        color: white;
+        text-decoration-line: none;
+        padding: 10px;
+    }
+    .a5:hover{
+        color: #00BCCD;
+    }
+    
+    .menu{
+        position: absolute;
+        left: 90%;
+        border-style: none;
+        
+    }
+    .n{
+        position:absolute;
+        left: 18%;
+        top: 20%;
+        font-size: 2.5em;
+        color: white;
+        font-family: 'Gotu';
+    }
+    .m{
+        position: absolute;
+        left: 55%;
+        top: 20%;
+        font-size: 2.5em;
+        color: #00BCCD;
+        font-family: 'Gotu';
+    }
+    .txt1{
+        position: absolute;
+        width: 50%;
+        left: 25%;
+        top: 35%;
+        font-size: 1.5em;
+        color: white;
+        font-family: 'Gotu';
+    }
+    .box1{
+        display: flex;
+        position: absolute;
+        border: 1px solid black;
+        background-color: white;
+        border-radius: 10%;
+        background-color: #005E93;
+        width: 50%;
+        height: 60%;
+        left: 22%;
+        top: 40%;
+    }
+    
+    .titulo1{
+        display: flex;
+        position: absolute;
+        top: 5%;
+        left: 6%;
+        width: 80%;
+        font-family: 'Gotu';
+        font-size: 1.7em;
+    }
+    
+    #idNome{
+        position: absolute;
+        top: 25%;
+        left: 10%;
+        border-radius: 10px;
+        height: 7%;
+        width: 75%;
+        border-style: none;
+    }
+    
+    #idEmail{
+        position: absolute;
+        top: 35%;
+        left: 10%;
+        border-radius: 10px;
+        height: 7%;
+        width: 75%;
+        border-style: none;
+    }
+    #idMensagem{
+        position: absolute;
+        top: 45%;
+        left: 10%;
+        border-radius: 10px;
+        height: 45%;
+        width: 75%;
+        text-align: start;
+    }
+    #idMensagem::placeholder{
+        position: absolute;
+        top: 4%;
+        left: 2%;
+    }
+    .mandar{
+        position: absolute;
+        background-color:#00BCCD;
+        border: 1.2px solid #00BCCD;
+        border-radius: 10px;
+        height: 5%;
+        width: 15%;
+        color:black;
+        list-style: none;
+        font-weight: bold;
+        position: absolute;
+        display: flex;
+        top: 93%;
+        left: 35%;
+         
+    }
+    .env{
+        position: absolute;
+        top: 20%;
+        left: 15%;
+    } 
+}
+@media screen and (max-width:480px){
+    /* Parte da logo */
+    .logo{
+        position: absolute;
+        display: flex;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 150%;
+        text-align: center;
+        background-image: url('../imagens_fundo/img1.png');
+        background-size: 1300px 1024px;
+        
+    }
+    .otherPg{
+        border-radius: 5%;
+        height: 5%;
+        width: 90%;
+        color:white;
+        list-style: none;
+        font-weight: bold;
+        text-align: center;
+        position: fixed;
+        display: flex;
+        top: 2%;
+        left: 2%;
+    }
+    
+    .links{
+        position: absolute;
+        top: 30%;
+        color: white;
+        font-family: 'Gotu';
+        font-size: 0.6em;
+    }
+    
+    .a1{
+        color: white;
+        text-decoration-line: none;
+        padding: 20px;
+    }
+    .a1:hover{
+        color: #00BCCD;
+    }
+    .a2{
+        background-color: transparent;
+        color: white;
+        text-decoration-line: none;
+        padding: 10px;
+        border-style: none;
+    }
+    
+    .a2:hover{
+        color: #00BCCD;
+    }
+    .a3{
+        color: white;
+        text-decoration-line: none;
+        padding: 10px;
+    }
+    .a3:hover{
+        color: #00BCCD;
+    }
+    .a4{
+        color: white;
+        text-decoration-line: none;
+        padding: 10px;
+    }
+    .a4:hover{
+        color: #00BCCD;
+    }
+    .a5{
+        color: white;
+        text-decoration-line: none;
+        padding: 10px;
+    }
+    .a5:hover{
+        color: #00BCCD;
+    }
+    
+    .menu{
+        position: absolute;
+        left: 90%;
+        border-style: none;
+        
+    }
+    .n{
+        position:absolute;
+        left: 18%;
+        top: 10%;
+        font-size: 1.6em;
+        color: white;
+        font-family: 'Gotu';
+    }
+    .m{
+        position: absolute;
+        left: 57%;
+        top: 10%;
+        font-size: 1.6em;
+        color: #00BCCD;
+        font-family: 'Gotu';
+    }
+    .txt1{
+        position: absolute;
+        width: 50%;
+        left: 25%;
+        top: 35%;
+        font-size: 1.5em;
+        color: white;
+        font-family: 'Gotu';
+    }
+    .box1{
+        display: flex;
+        position: absolute;
+        border: 1px solid black;
+        background-color: white;
+        border-radius: 10%;
+        background-color: #005E93;
+        width: 50%;
+        height: 60%;
+        left: 22%;
+        top: 20%;
+    }
+    
+    .titulo1{
+        display: flex;
+        position: absolute;
+        top: 5%;
+        left: 6%;
+        width: 80%;
+        font-family: 'Gotu';
+        font-size: 1em;
+    }
+    
+    #idNome{
+        position: absolute;
+        top: 25%;
+        left: 10%;
+        border-radius: 10px;
+        height: 7%;
+        width: 75%;
+        border-style: none;
+    }
+    
+    #idEmail{
+        position: absolute;
+        top: 35%;
+        left: 10%;
+        border-radius: 10px;
+        height: 7%;
+        width: 75%;
+        border-style: none;
+    }
+    #idMensagem{
+        position: absolute;
+        top: 45%;
+        left: 10%;
+        border-radius: 10px;
+        height: 45%;
+        width: 75%;
+        text-align: start;
+    }
+    #idMensagem::placeholder{
+        position: absolute;
+        top: 4%;
+        left: 2%;
+    }
+    .mandar{
+        position: absolute;
+        background-color:#00BCCD;
+        border: 1.2px solid #00BCCD;
+        border-radius: 10px;
+        height: 5%;
+        width: 22%;
+        color:black;
+        list-style: none;
+        font-weight: bold;
+        position: absolute;
+        display: flex;
+        top: 93%;
+        left: 35%;
+         
+    }
+    .env{
+        position: absolute;
+        top: 20%;
+        left: 15%;
+    } 
+}
