--- a/css/Abrolhos.css
+++ b/css/Abrolhos.css
@@ -19,8 +19,6 @@ body{
     width: 100%;
     height: 125%;
     text-align: center;
-    
-    
     background-size: 1744px 842px;
     
 }
@@ -35,7 +33,9 @@ body{
     position: fixed;
     display: flex;
     top: 2%;
-    left: 20%;
+    left: 28%;
+    z-index: 1;
+    font-size: 20px;
 }
 
 .links{
