--- a/css/FernandoNoronha.css
+++ b/css/FernandoNoronha.css
@@ -33,8 +33,9 @@ body{
     position: fixed;
     display: flex;
     top: 2%;
-    left: 20%;
+    left: 28%;
     z-index:1;
+    font-size: 20px;
 }
 
 .links{
